fix delivery invoice